# Informer

./: .bazelrc  .gitmodules  BUILD.bazel  BUILD.gn  WORKSPACE.bazel  compile_flags.txt
src/: BUILD.bazel  Informer_tests.cc  receiver-inl.h  receiver.cc  receiver.h  reporter.h
