
filegroup(
    name = "informer_srcs",
    srcs = ["reporter.h", "receiver.h", "receiver.cc"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "informer_test_srcs",
    srcs = ["reporter.h", "receiver.h", "receiver.cc", "Informer_tests.cc"],
    visibility = ["//visibility:public"],
)
